After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617821 - fix pygtk.require call, and check for errors resulting from it
fix pygtk.require call, and check for errors resulting from it
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Plugins
unspecified
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on: 617587
Blocks:
 
 
Reported: 2010-05-05 20:56 UTC by Jonathan Matthew
Modified: 2010-05-10 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
python init fixes (980 bytes, patch)
2010-05-05 20:56 UTC, Jonathan Matthew
none Details | Review

Description Jonathan Matthew 2010-05-05 20:56:06 UTC
Created attachment 160380 [details] [review]
python init fixes

+++ This bug was initially created as a clone of Bug #617587 +++

Only a couple of bits of my changes to fix bug 617587 apply to totem (and none apply to gedit or epiphany).  Specifically:

- the version passed to pygtk.require() is just the gtk major version, since it's there for parallel installability, so we should only pass in "2.0".
- need some error checking after calling that
Comment 1 Bastien Nocera 2010-05-07 12:40:48 UTC
mmit aeeb165117a80080b044d54d5dc8b64df3128c26
Author: Jonathan Matthew <jonathan@kaolin.wh9.net>
Date:   Fri May 7 13:23:17 2010 +0100

    Fix version requirements for PyGTK
    
    pygtk.require() actually needs the major GTK+ version, and
    doesn't use the minor version in the require.
    
    Also make sure to check for the return value to avoid surprises.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=617821
Comment 2 Michael Weber 2010-05-07 17:18:25 UTC
(In reply to comment #1)

Is there a release date for the next tarball in the foreseeable future? 
(The problem is non-hypothetical, see http://bugs.gentoo.org/318885 for instructions how to trigger an error, i.e. enable D-BUS or Jamendo plugin).
Comment 3 Bastien Nocera 2010-05-10 15:50:39 UTC
Will be in the next 2.30.x release.