Fix version requirements for PyGTK

pygtk.require() actually needs the major GTK+ version, and
doesn't use the minor version in the require.

Also make sure to check for the return value to avoid surprises.

https://bugzilla.gnome.org/show_bug.cgi?id=617821